--- a/CLIENT/index.html
+++ b/CLIENT/index.html
@@ -2,11 +2,106 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script type="text/javascript" src="script.js"></script>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="module" src="index.js"></script>
+    <link rel="stylesheet" type="text/css" href="script.css">
+    <title>Interacción con el Servidor</title>
 </head>
+<body>
 
-    
+    <h1>Interacción con el Servidor</h1>
+
+    <h2>Listado de Tarjetas Gráficas</h2>
+    <button onclick="getTarjetasGraficas()">Obtener Tarjetas Gráficas</button>
+    <div id="tarjetasGraficas"></div>
+
+    <h2>Agregar Tarjeta Gráfica</h2>
+    <form id="agregarForm" onsubmit="agregarTarjetaGrafica(); return false;">
+        <label for="nombre">Nombre:</label>
+        <input type="text" id="nombre" required>
+        <label for="precio">Precio:</label>
+        <input type="number" id="precio" required>
+        <button type="submit">Agregar Tarjeta Gráfica</button>
+    </form>
+
+    <h2>Actualizar Tarjeta Gráfica</h2>
+    <form id="actualizarForm" onsubmit="actualizarTarjetaGrafica(); return false;">
+        <label for="idActualizar">ID de Tarjeta Gráfica a Actualizar:</label>
+        <input type="number" id="idActualizar" required>
+        <label for="nuevosDetalles">Nuevos Detalles:</label>
+        <textarea id="nuevosDetalles" rows="4" required></textarea>
+        <button type="submit">Actualizar Tarjeta Gráfica</button>
+    </form>
+
+    <h2>Eliminar Tarjeta Gráfica</h2>
+    <form id="eliminarForm" onsubmit="eliminarTarjetaGrafica(); return false;">
+        <label for="idEliminar">ID de Tarjeta Gráfica a Eliminar:</label>
+        <input type="number" id="idEliminar" required>
+        <button type="submit">Eliminar Tarjeta Gráfica</button>
+    </form>
+
+    <script>
+        function getTarjetasGraficas() {
+            fetch('http://localhost:8080/tarjetasGraficas')
+                .then(response => response.json())
+                .then(data => {
+                    document.getElementById('tarjetasGraficas').innerHTML = JSON.stringify(data, null, 2);
+                })
+                .catch(error => console.error('Error al obtener tarjetas gráficas:', error));
+        }
+
+        function agregarTarjetaGrafica() {
+            const nombre = document.getElementById('nombre').value;
+            const precio = document.getElementById('precio').value;
+
+            fetch('http://localhost:8080/agregarTarjetaGrafica', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ nombre, precio })
+            })
+                .then(response => response.json())
+                .then(data => {
+                    alert(data.mensaje);
+                    getTarjetasGraficas();
+                })
+                .catch(error => console.error('Error al agregar tarjeta gráfica:', error));
+        }
+
+        function actualizarTarjetaGrafica() {
+            const idActualizar = document.getElementById('idActualizar').value;
+            const nuevosDetalles = JSON.parse(document.getElementById('nuevosDetalles').value);
+
+            fetch(`http://localhost:8080/actualizarTarjetaGrafica/${idActualizar}`, {
+                method: 'PUT',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(nuevosDetalles)
+            })
+                .then(response => response.json())
+                .then(data => {
+                    alert(data.mensaje);
+                    getTarjetasGraficas();
+                })
+                .catch(error => console.error('Error al actualizar tarjeta gráfica:', error));
+        }
+
+        function eliminarTarjetaGrafica() {
+            const idEliminar = document.getElementById('idEliminar').value;
+
+            fetch(`http://localhost:8080/${idEliminar}`, {
+                method: 'DELETE'
+            })
+                .then(response => response.json())
+                .then(data => {
+                    alert(data.mensaje);
+                    getTarjetasGraficas();
+                })
+                .catch(error => console.error('Error al eliminar tarjeta gráfica:', error));
+        }
+    </script>
+
 </body>
 </html>
-
